manifests/argocd/forgejo-egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: argocd
  annotations:
    tailscale.com/tailnet-fqdn: forgejo.lungfish-ide.ts.net
spec:
  type: ExternalName
  externalName: placeholder
