manifests/argocd/gitea-egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: argocd
  annotations:
    tailscale.com/tailnet-fqdn: git.organa.one
spec:
  type: ExternalName
  externalName: placeholder
  ports:
    - port: 443
      protocol: TCP
      name: https
